feat: project goals
